--- a/hellstyle.css
+++ b/hellstyle.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("pic/canvas.jpg.jpg");
+    background-image: url("pic/canvas.jpg");
     margin: 50px;
     background-attachment: fixed;
 }
