--- a/hellstyle.css
+++ b/hellstyle.css
@@ -312,3 +312,33 @@ tbody tr:nth-child(even) {
 .container{
   min-width: 1270px;
 }
+
+select > :nth-child(1){
+	background-color: burlywood;
+	color: black;
+}
+
+select > :nth-child(3){
+	background-color: rgb(24, 129, 24);
+	color: white;
+}
+
+select > :nth-child(4){
+	background-color: red;
+	color: white;
+}
+
+select > :nth-child(5){
+	background-color: darkviolet;
+	color: white;
+}
+
+select > :nth-child(6){
+	background-color: cyan;
+	color: black;
+}
+
+select > :nth-child(7){
+	background-color: gold;
+	color: green;
+}
