--- a/hellstyle.css
+++ b/hellstyle.css
@@ -1,7 +1,7 @@
 body {
-    background-image: url("pic/canvas.jpg");
+    background-image: url("pic/fon11.jpg");
     margin: 50px;
-    background-attachment: fixed;
+/*     background-attachment: fixed; */
 }
 
 /*Название Главное*/
